--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
+    "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.17",
     "winston": "^3.11.0",
     "zod": "^3.24.4"
