--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,65 @@
-node_modules
+# Dependencias
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+package-lock.json
+yarn.lock
+
+# Archivos de TypeScript y compilación
+dist/
+build/
+*.js.map
+*.d.ts
+ormconfig.d.ts
+
+# Archivos de configuración de entorno
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Archivos de logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Archivos del sistema
+.DS_Store
+Thumbs.db
+Desktop.ini
+
+# Directorios de IDEs y editores
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Archivos temporales
+*.tmp
+*.temp
+.cache/
+tmp/
+
+# Archivos de pruebas y cobertura
+coverage/
+.nyc_output/
+.jest/
+
+# Archivos de respaldo generados por editores
+*~
+*.bak
+*.backup
+
+# Archivos compilados de configuración
+/ormconfig.js
+/ormconfig.js.map
+/src/ormconfig.js
