--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,9 @@
     "sourceMap": true,                         
     "resolveJsonModule": true,                 
     "declaration": true,                       
-    "baseUrl": "./src",                        
-    "paths": {                                 
-      "@/*": ["*"]
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
     }
   },
   "include": ["src/**/*.ts"],
