--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "dist/app.js",
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "nodemon --exec ts-node src/app.ts",
     "build": "tsc",
+    "clean": "rm -rf dist",
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "dev:nodemon": "nodemon --exec ts-node src/app.ts",
     "seed": "ts-node src/db/seed.ts",
     "test": "jest",
     "lint": "eslint 'src/**/*.{js,ts}' --fix"
@@ -40,6 +42,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
 }
