--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NODE_ENV=development
 JWT_SECRET=supersecretkey123456789
 
 # Base de datos
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
